Switched to Fab's jda3 repo and added it comamnds

--- a/.gitignore
+++ b/.gitignore
@@ -198,16 +198,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 ### Project ###
-/cache/
-/plugins/
-/libs/
-/bootstrap/cache/
-/bootstrap/plugins/
-/bootstrap/libs/
-
-# Config file for Redis connection
-/config.json
-/bootstrap/config.json
-
-# Contains private keys for build process
-/gradle.properties
+err.log
+out.log
