--- a/build.gradle
+++ b/build.gradle
@@ -17,38 +17,37 @@ mainClassName = "com.almightyalpaca.discord.jdabutler.Bot"
 repositories {
 	mavenCentral()
 	jcenter()
+    maven {
+        name "Fab's kindly provided JDA3 Alpha maven repo"
+        url "http://nexus.notfab.net/content/repositories/JDA3"
+    }
 }
 
 dependencies {
-
-//	// JDA
-//	compile(group: 'net.dv8tion', name: 'JDA', version: '2.2.1_368') {
-//		// I don't want all the audio libs currectly. They are just a waste of space.
-//		// This breaks URLPlayer and FilePlayer but JDA-Player will still work.
-//		exclude group: 'junit', module: 'junit'
-//		exclude group: 'jflac', module: 'jflac'
-//		exclude group: 'net.sourceforge.jaadec', module: 'jaad'
-//		exclude group: 'org.tritonus', module: 'tritonus-dsp'
-//		exclude group: 'com.googlecode.soundlibs', module: 'tritonus-share'
-//		exclude group: 'com.googlecode.soundlibs', module: 'mp3spi'
-//	}
+	// JDA
+	compile(group: 'net.dv8tion', name: 'jda', version: '3.0.ALPHA_51') {
+		// I don't want all the audio libs currectly. They are just a waste of space.
+		// This breaks URLPlayer and FilePlayer but JDA-Player will still work.
+		exclude group: 'junit', module: 'junit'
+		exclude group: 'jflac', module: 'jflac'
+		exclude group: 'net.sourceforge.jaadec', module: 'jaad'
+		exclude group: 'org.tritonus', module: 'tritonus-dsp'
+		exclude group: 'com.googlecode.soundlibs', module: 'tritonus-share'
+		exclude group: 'com.googlecode.soundlibs', module: 'mp3spi'
+	}
 	
 	// JOrbis
 	// Also not, same reason
 	// compile group: 'com.googlecode.soundlibs', name: 'jorbis', version: '0.0.17-3'
-	
+
 	// Updated version of jda's dependencies
 	compile group: 'org.json', name: 'json', version: '20160810'
 	compile group: 'net.java.dev.jna', name: 'jna', version: '4.2.2'
 	compile group: 'com.neovisionaries', name: 'nv-websocket-client', version: '1.30'
 	compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
 
-	// Because I use local jar atm
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
-	compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
-
 	// Gson
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
 	// Commons-IO
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
