--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,19 @@ dependencies {
 
 	// Commons-IO
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
-	
+
 	// Groovy JSR-223 / Script engine 
 	compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.7'
 
 	// Guava
 	compile group: 'com.google.guava', name: 'guava', version: '20.0'
-	
+
+	// Dropbox
+	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '2.1.2'
+
+	// Zip4J
+	compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
+
 	// Javaparser
 	// compile group: 'com.github.javaparser', name: 'javaparser-core', version: '3.0.0-alpha.8'
 
