--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'application'
 	id 'com.github.johnrengelman.shadow' version '1.2.4'
-	id 'com.github.ben-manes.versions' version '0.13.0'
+	id 'com.github.ben-manes.versions' version '0.14.0'
 }
 
 sourceCompatibility = 1.8
@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
 	// JDA
-	compile group: 'net.dv8tion', name: 'JDA', version: '3.0.BETA2_109'
+	compile group: 'net.dv8tion', name: 'JDA', version: '3.0.BETA2_126'
 
 	// Gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
@@ -28,10 +28,10 @@ dependencies {
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
 	// Groovy JSR-223 / Script engine 
-	compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.7'
+	compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.8'
 
 	// Guava
-	compile group: 'com.google.guava', name: 'guava', version: '20.0'
+	compile group: 'com.google.guava', name: 'guava', version: '21.0'
 
 	// Dropbox
 	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '2.1.2'
@@ -39,20 +39,8 @@ dependencies {
 	// Zip4J
 	compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
 
-	// Javaparser
-	// compile group: 'com.github.javaparser', name: 'javaparser-core', version: '3.0.0-alpha.8'
-
-	// Reflections
-	// compile group: 'org.reflections', name: 'reflections', version: '0.9.10'
-
-	// Possible local jar files
-	// compile fileTree(dir: 'lib', include: '*.jar')
-
-	// JUnit for testing
-	// testCompile group: 'junit', name: 'junit', version: '4.12'
-
 }
 
-wrapper { // This task is to specify the gradle version
-	gradleVersion = '3.2.1'
+wrapper {
+	gradleVersion = '3.3'
 }
