--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
 	// JDA
-	compile group: 'net.dv8tion', name: 'JDA', version: '3.0.BETA2_126'
+	compile group: 'net.dv8tion', name: 'JDA', version: '3.0.0_155'
 
 	// Gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
@@ -28,13 +28,13 @@ dependencies {
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
 	// Groovy JSR-223 / Script engine 
-	compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.8'
+	compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.9'
 
 	// Guava
 	compile group: 'com.google.guava', name: 'guava', version: '21.0'
 
 	// Dropbox
-	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '2.1.2'
+	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.0'
 
 	// Zip4J
 	compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
