--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,12 @@ mainClassName = "com.almightyalpaca.discord.jdabutler.Bot"
 repositories {
 	mavenCentral()
 	jcenter()
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
 	// JDA
-	compile group: 'net.dv8tion', name: 'JDA', version: '3.0.0_177'
-
+	compile group: 'com.github.DV8FromTheWorld', name: 'JDA', version: 'feature~audit-logs-SNAPSHOT'
 
 	// Gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
