--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 
 dependencies {
 	// JDA
-	compile group: 'com.github.DV8FromTheWorld', name: 'JDA', version: 'feature~audit-logs-SNAPSHOT'
+	compile group: 'com.github.DV8FromTheWorld', name: 'JDA', version: 'f3c13e4'
 
 	// Gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
@@ -35,13 +35,17 @@ dependencies {
 	compile group: 'com.google.guava', name: 'guava', version: '21.0'
 
 	// Dropbox
-	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.0'
+	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.3'
 
 	// Zip4J
 	compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
 
 }
 
+run { 
+	systemProperties System.properties
+}
+
 wrapper {
-	gradleVersion = '3.3'
+	gradleVersion = '3.5'
 }
