--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+    id 'idea'
 	id 'application'
 	id 'com.github.johnrengelman.shadow' version '1.2.4'
 	id 'com.github.ben-manes.versions' version '0.14.0'
