--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+    id 'idea'
 	id 'application'
 	id 'com.github.johnrengelman.shadow' version '1.2.4'
 	id 'com.github.ben-manes.versions' version '0.14.0'
@@ -20,7 +21,7 @@ repositories {
 
 dependencies {
 	// JDA
-	compile group: 'com.github.DV8FromTheWorld', name: 'JDA', version: '47a1189'
+	compile group: 'net.dv8tion', name: 'JDA', version: '3.1.1_210'
 
 	// Gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
@@ -39,6 +40,11 @@ dependencies {
 
 	// Zip4J
 	compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
+
+	// jsoup HTML parser library @ http://jsoup.org/
+	compile 'org.jsoup:jsoup:1.10.2'
+
+	testCompile 'junit:junit:4.12'
 }
 
 run {
