--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'application'
 	id 'com.github.johnrengelman.shadow' version '1.2.4'
 	id 'com.github.ben-manes.versions' version '0.14.0'
+	id 'com.sedmelluq.jdaction' version '1.0.2'
 }
 
 sourceCompatibility = 1.8
