--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
 	id 'java'
     id 'idea'
 	id 'application'
-	id 'com.github.johnrengelman.shadow' version '1.2.4'
-	id 'com.github.ben-manes.versions' version '0.14.0'
+	id 'com.github.johnrengelman.shadow' version '2.0.1'
+	id 'com.github.ben-manes.versions' version '0.15.0'
 	id 'com.sedmelluq.jdaction' version '1.0.2'
 }
 
@@ -12,7 +12,7 @@ targetCompatibility = 1.8
 
 compileJava.options.encoding = 'UTF-8'
 
-mainClassName = "com.almightyalpaca.discord.jdabutler.Bot"
+mainClassName = 'com.almightyalpaca.discord.jdabutler.Bot'
 
 repositories {
 	mavenCentral()
@@ -22,10 +22,10 @@ repositories {
 
 dependencies {
 	// JDA
-	compile group: 'net.dv8tion', name: 'JDA', version: '3.1.1_210'
+	compile group: 'net.dv8tion', name: 'JDA', version: '3.2.0_228'
 
 	// Gson
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
 
 	// Commons-IO
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
@@ -34,7 +34,7 @@ dependencies {
 	compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.9'
 
 	// Guava
-	compile group: 'com.google.guava', name: 'guava', version: '21.0'
+	compile group: 'com.google.guava', name: 'guava', version: '22.0'
 
 	// Dropbox
 	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.3'
@@ -43,7 +43,10 @@ dependencies {
 	compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
 
 	// jsoup HTML parser library @ http://jsoup.org/
-	compile 'org.jsoup:jsoup:1.10.2'
+	compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
+
+    // Unirest until I can get myself to remove it from the code
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
 
 	testCompile 'junit:junit:4.12'
 }
@@ -53,5 +56,5 @@ run {
 }
 
 wrapper {
-	gradleVersion = '3.5'
+	gradleVersion = '4.0.1'
 }
