--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,16 @@ repositories {
 	maven { url 'https://jitpack.io' }
 }
 
+configurations.all {
+	resolutionStrategy.cacheChangingModulesFor 1, 'minutes'
+}
+
 dependencies {
 	// JDA
-	compile group: 'net.dv8tion', name: 'JDA', version: '3.2.0_237'
+	compile group: 'net.dv8tion', name: 'JDA', version: '3.2.0_+'
+
+	// Apache lang3 (Pair, Triple, ExceptionUtils,...)
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 
 	// Gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
