Added trailing newline to webhook appender pattern (stacktraces on new line)

--- a/config.template.json
+++ b/config.template.json
@@ -16,7 +16,7 @@
     "enabled": false,
     "webhookurl": "",
     "level": "warn",
-    "pattern": "[%d{HH:mm:ss}] [%level] %logger{0}: %msg"
+    "pattern": "[%d{HH:mm:ss}] [%level] %logger{0}: %msg%n"
   },
   "testing": true,
   "prefix": "|"
