--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ plugins {
 	id 'com.sedmelluq.jdaction' version '1.0.2'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = targetCompatibility = 1.8
 
 compileJava.options.encoding = 'UTF-8'
 
@@ -40,10 +39,10 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
 	// Guava
-	compile group: 'com.google.guava', name: 'guava', version: '23.6-jre'
+	compile group: 'com.google.guava', name: 'guava', version: '24.0-jre'
 
 	// Dropbox
-	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.5'
+	compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.6'
 
 	// Zip4J
 	compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
