added (very) simple graphql mapping + github queries

--- a/config.template.json
+++ b/config.template.json
@@ -9,7 +9,6 @@
   },
   "jda": {
     "version": {
-      "gradle-example-link": "https://www.dropbox.com/s/0n4l6zdrw0zt8nz/jda%20gradle%20setup%20example.zip?dl=1"
     }
   },
   "webhook": {
@@ -19,5 +18,9 @@
     "pattern": "[%d{HH:mm:ss}] [%level] %logger{0}: %msg%n"
   },
   "testing": true,
-  "prefix": "|"
+  "prefix": "|",
+  "dropbox": {
+    "access_token": ""
+  },
+  "github_token": ""
 }
