fixed SocketTimoutException bubbling and using dropbox share link for gradle example if possible now

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ out.log
 config.json
 /.idea/
 exmaple gradle project for jda.zip
+example gradle project for jda.zip
 gradle project/
 gradle-cache/
 
