--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ repositories {
 
 dependencies {
     // JDA
-    compile group: 'net.dv8tion', name: 'JDA', version: '3.7.1_386'
+    compile ('net.dv8tion:JDA:3.7.1_404') {
+        exclude module: 'opus-java'
+    }
 
     // Apache commons Lang 3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
