--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,12 @@ repositories {
 
 dependencies {
     // JDA
-    compile ('net.dv8tion:JDA:3.8.1_438') {
+    compile ('net.dv8tion:JDA:3.8.1_439') {
         exclude module: 'opus-java'
     }
+
+    // Webhooks
+    compile group: 'club.minnced', name: 'discord-webhooks', version: '0.1.3'
 
     // Apache commons Lang 3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
