--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@ plugins {
     id 'java'
     id 'idea'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '2.0.4'
+    id 'com.github.johnrengelman.shadow' version '4.0.2'
     id 'com.github.ben-manes.versions' version '0.20.0'
-    id 'com.sedmelluq.jdaction' version '1.0.2'
+//    id 'com.sedmelluq.jdaction' version '1.0.2' //warning: fails horribly on gradle 4.8+
 }
 
 sourceCompatibility = targetCompatibility = 1.8
@@ -39,7 +39,7 @@ dependencies {
     // Apache Commons IO
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
 
-    // Groovy JSR-223 / Script engine 
+    // Groovy JSR-223 / Script engine
     compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.13'
 
     // Gson
