--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -66,7 +66,8 @@ task getBotVersionInfo(type: Exec) {
             from (sourceSets.main.allJava) {
                 include '**/BotVersion.java'
                 filter(ReplaceTokens, tokens: [
-                        VERSION: standardOutput.toString().trim().replace("\n", "\\n").replace("\"", "\\\"")
+                        VERSION: standardOutput.toString().trim().replace("\n", "\\n").replace("\"", "\\\""),
+                        BUILD: buildNumber
                 ])
             }
         }
