--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     // Apache Commons IO
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
 
-    // Groovy JSR-223 / Script engine
-    compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.4.13'
+    // Groovy JSR-223 / Script engine. TODO: might change eval command to jshell in the future
+    compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.5.3'
 
     // Gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
