--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 dependencies {
     // JDA
-    compile ('net.dv8tion:JDA:4.BETA.0_1') {
+    compile ('net.dv8tion:JDA:4.0.0_39') {
         exclude module: 'opus-java'
     }
     
