--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -12,50 +12,50 @@ repositories {
 
 dependencies {
     // JDA
-    compile ('net.dv8tion:JDA:4.2.0_171') {
+    implementation ('net.dv8tion:JDA:4.2.0_171') {
         exclude module: 'opus-java'
     }
     
     // Trove Collections
-    compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
+    implementation group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
     
     // Other Collections
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 
     // Webhooks
-    compile group: 'club.minnced', name: 'discord-webhooks', version: '0.1.3'
+    implementation group: 'club.minnced', name: 'discord-webhooks', version: '0.1.3'
 
     // Apache commons Lang 3
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 
     // Apache Commons Text
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.2'
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.2'
 
     // Apache Commons IO
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
     // Groovy JSR-223 / Script engine. TODO: might change eval command to jshell in the future
-    compile group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.5.3'
+    implementation group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.5.3'
 
     // Gson
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
     // Guava
-    compile group: 'com.google.guava', name: 'guava', version: '24.0-jre'
+    implementation group: 'com.google.guava', name: 'guava', version: '24.0-jre'
 
     // Dropbox
-    compile group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.6'
+    implementation group: 'com.dropbox.core', name: 'dropbox-core-sdk', version: '3.0.6'
 
     // Zip4J
-    compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
+    implementation group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
 
     // jsoup HTML parser library @ http://jsoup.org/
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
     
     // Remark for html -> markdown (docs)
-    compile "com.kotcrab.remark:remark:1.0.0"
+    implementation "com.kotcrab.remark:remark:1.0.0"
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 run {
