--- a/.gitignore
+++ b/.gitignore
@@ -211,6 +211,7 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
+docker-compose.override.yml
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
