--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -5,6 +5,10 @@ plugins {
 mainClassName = 'com.almightyalpaca.discord.jdabutler.Bot'
 
 repositories {
+    mavenCentral()
+    maven {
+        url = 'https://m2.dv8tion.net/releases'
+    }
     maven {
         url = 'https://jitpack.io'
     }
@@ -12,7 +16,7 @@ repositories {
 
 dependencies {
     // JDA
-    implementation ('net.dv8tion:JDA:4.2.0_247') {
+    implementation ('net.dv8tion:JDA:4.2.1_268') {
         exclude module: 'opus-java'
     }
     
@@ -23,7 +27,7 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 
     // Webhooks
-    implementation group: 'club.minnced', name: 'discord-webhooks', version: '0.1.3'
+    implementation group: 'club.minnced', name: 'discord-webhooks', version: '0.5.7'
 
     // Apache commons Lang 3
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
